k8s-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: quantum-liquid-service
  labels:
    app: quantum-liquid
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 8080
    protocol: TCP
    name: https
  selector:
    app: quantum-liquid
    version: v1
  sessionAffinity: None
